@@ -24,9 +24,19 @@
 
 using std::filesystem::filesystem_error;
 
+// The COW std::string does not have noexcept copies, because copying a
+// "leaked" string can throw (and for fully-dynamic strings, copying the
+// empty rep can also throw).
+// That's OK, because we know that the std::string in the std::runtime_error
+// or std::logic_error base class won't be leaked (and usually won't be empty).
+// The is_nothrow_xxx type traits don't know that though, so we can only
+// check them for the cxx11 ABI, which uses __cow_string, which has noexcept
+// copies.
+#if _GLIBCXX_USE_CXX11_ABI
 // PR libstdc++/83306
 static_assert(std::is_nothrow_copy_constructible_v<filesystem_error>);
 static_assert(std::is_nothrow_copy_assignable_v<filesystem_error>);
+#endif
 
 void
 test01()
